# taygedo.py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: login_test.sh
src/tagedo/: __init__.py  __main__.py  client.py
src/tagedo/assets/: nte.py
src/tagedo/cli/: __init__.py  _interactive.py  _shared.py  _storage.py  auth.py  conf.py  ht.py  nte.py
src/tagedo/core/: __init__.py  auth_provider.py  client.py  (+6 more)
src/taygedo/: __init__.py  __main__.py  client.py
tests/: __init__.py  _cli_fixtures.py  _fixtures.py  _helpers.py  test_assets_nte.py  test_baseclient_lifecycle.py  test_bearer_provider.py  test_cli_auth_extras.py  test_cli_auth_login_flow.py  test_cli_conf.py  test_cli_har3_integrations.py  test_cli_ht_subcommands.py  test_cli_interactive.py  test_cli_nte_subcommands.py  test_cli_render.py  test_cli_storage.py  test_endpoint_401_retry.py  test_endpoint_auth_required.py  test_endpoint_default_headers.py  test_endpoint_method_helpers.py  test_endpoint_param_inference.py  test_endpoint_signer_factory.py  test_endpoint_strict_response.py  test_har3_payloads.py  test_har4_payloads.py  test_ht_service.py  test_login_flow.py  test_models_against_har.py  test_nte_models.py  test_refresh_middleware.py  test_service_descriptor.py  test_session_state.py  test_sign_ds.py  test_sign_laohu.py  test_signer_resolution.py  test_utils_data.py
tests/fixtures/: ds_samples.json  har1_idx0_get_game_roles_v2_empty.json  har1_idx100_sms_login.json  har1_idx101_check_captcha.json  har1_idx102_send_captcha.json  har1_idx118_column_home.json  har1_idx119_official_post_list.json  har1_idx120_recommend_post_list.json  har1_idx121_community_home.json  har1_idx122_app_startup_data.json  har1_idx123_get_all_community.json  har1_idx125_app_config.json  har1_idx128_area_code_list.json  har1_idx129_init_config.json  har1_idx130_web_view_urls.json  har1_idx2_user_browse_records.json  har1_idx36_ht_role_record.json  har1_idx38_get_game_bind_role_ht.json  har1_idx4_get_user_full_info.json  har1_idx57_user_reply_feeds.json  har1_idx5_game_record_card.json  har1_idx61_user_tasks.json  har1_idx62_exp_level.json  har1_idx63_exp_records.json  har1_idx64_signin_result.json  har1_idx94_coin_task_state.json  har1_idx99_bbs_login.json  har2_idx114_sign_rewards.json  har2_idx118_signin_state.json  har2_idx160_unread_cnt.json  har2_idx27_realestate.json  har2_idx29_vehicles.json  har2_idx52_area_progress.json  har2_idx54_characters.json  har2_idx63_role_home.json  har3_idx138_game_record_card.json  har3_idx145_user_browse_records.json  har3_idx146_user_collect_posts.json  har3_idx147_user_reply_feeds.json  har3_idx148_user_post_list.json  (+31 more)
(+133 files in other folders)
