[project]
name = "taygedo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "cryptography>=43",
    "curl-cffi>=0.15.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.13.2",
    "rich>=13",
    "tomlkit>=0.12",
]

[project.scripts]
taygedo = "taygedo.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# `@endpoint`-decorated methods declare their contract via signature only;
# their body is `...` and supplied by the framework at call time.
disable_error_code = ["empty-body"]

[[tool.mypy.overrides]]
# utils/data.py uses Protocol with TypeVar — variance + cast checks tightened
# in newer mypy releases conflict with the call-site contract; preserved as-is.
module = "taygedo.utils.data"
ignore_errors = true
